commit first portfolio test

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<img id="mobile-exit" class="mobile-menu-exit" src="images/exit.svg" alt="Close Navigation">
 					
 					<ul class="primary-nav">
-						<li><a href="#products">products</a></li>
+						<li><a href="#products">services</a></li>
 						<li><a href="#about">about</a></li>
 						<li><a href="#contact">contact</a></li>
 					</ul>
@@ -48,7 +48,7 @@
 		
 		<section id="products" class="products-section">
 			<div class="container">
-				<h2>Products</h2>
+				<h2>Services</h2>
 				
 				<ul class="products-list">
 					<li><a href="/medical.html">Medical Solutions</a></li>
