commit about page test

--- a/moss/index.html
+++ b/moss/index.html
@@ -4,15 +4,15 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>moss | UX/UI Designer</title>
-	<link rel="stylesheet" href="../css/moss.css"> 
+	<link rel="stylesheet" href="css/moss.css"> 
 	</head>
 
-	<body>
+	<body bgcolor="#DDDDDD">
 		
 		<div>
 			<nav id="menu">
 				<ul>
-					<li><a href="#">about</a></li>
+					<li><a href="about.html">about</a></li>
 					<li><a href="#">work</a></li>
 					<li><a href="#">contact</a></li>
 				</ul>
