--- a/moss/about.html
+++ b/moss/about.html
@@ -9,6 +9,7 @@
 
 	<body bgcolor="#333333">
 		<div class="about-bg">
+		</div>
 		<div>
 			<nav id="menu">
 				<ul>
@@ -35,28 +36,41 @@
 			
 		</div>
 		
-			<!--<div class="about-txt">
-				<h1>Moss Morris</h1><br>
+			<div class="about-txt">
+				<h1>Moss Morris</h1><br><br>
 				<p>
-				I am self-taught in all design software. There is nothing I cannot do in Photoshop or Illustrator. Windows or Mac.<br>
+				Founder &amp; Creative Director of <span class="ca">Corporeal</span><span class="cay">Abstract</span> .
+				<br><br>
+				My specialisations:<br><br>
+				<h1 class="photoshop">Photoshop</h1>
+				<p>
+				Illustration. Colour correction. Fully labeled layers and <br>layer comp exports.
+				</p>
 				<br>
-				I have worked professionally, sometimes casually, as a graphic/product designer since 2001. I am an expert in non-destructive design flow in all Adobe Creative Cloud apps. Pixel perfect UI is where I live.
-				I'm also an OG in pre-press and print production.
+				<h1 class="illustrator">Illustrator</h1>
+				<p>
+				Clipping mask Archmage.<br>Pen tool Dominus.
+				</p>
+				<br>
+				<h1 class="indesign">Indesign</h1>
+				<p>
+				Small or large format.<br> Print shop perfect.<br> Colour Palette guru.
+				</p>
+				<br>
+				<h1 class="xd">XD</h1>
+				<p>
+				UX/UI prototyping. App flow. Mobile first responsive.
+				</p>
+				<br>
+				<h1><span class="html">HTML</span> &amp; <span class="css">CSS</span></h1>
+				<p>
+				with some JavaScript thrown in for fun.
 				<br><br>
-				Photoshop — Smart objects. Colour correction. Fully labeled layers and layer comp exports. Aye.
-				<br><br>
-				Illustrator — Clipping mask Archmage. Pen tool Dominus.
-				<br><br>
-				Indesign — Small or large format print. Print shop perfect. Colour Palette guru.
-				<br><br>
-				XD — UX prototyping. App flow. Mobile first responsive.
-				<br><br>
-				Dev — HTML/CSS with some JavaScript thrown in for fun.
-				<br><br>
-				I also have the best dog. I’ll let you meet him.</p>
-			</div>-->
-		</div>
-		
+				I also have the best dog.<br> I’ll let you meet him.
+				</p></p>
+				<br>
+				
+			</div>
 	<script src="scripts/app.js"></script>
 	<script>
 		var menu = document.getElementById("menu");
